Add links between help and command line (not nice)

--- a/test.html
+++ b/test.html
@@ -33,6 +33,7 @@
       document.getElementById("output").innerHTML = p.html(position) ;
       document.getElementById("help").innerHTML = p.help(position);
       document.getElementById("output2").innerHTML = p.nice() ;
+      create_links("help") ;
       }
       update() ;
     </script>
