Better help on command line

--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
       p = p.parse() ;
       document.getElementById("output").innerHTML = p.html(position) ;
       document.getElementById("help").innerHTML = p.help(position);
-      // document.getElementById("output2").innerHTML = p.nice() ;
+      document.getElementById("output2").innerHTML = p.nice() ;
       create_links("help") ;
       }
       update() ;
