--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
 	Cette application nécessite l'activation de JavaScript
 	<h1></noscript>
     <div>
-      Tapez une ligne de commande shell pour voir son interprétation :
+      Tapez une ligne de commande Bourne shell pour voir son interprétation :
       <div style="position:fixed; right:0; top: 0; color:#888">
 	<a onclick="update.debug = !update.debug;update.last = '';update()">
 	  debug</a>
