Only one HTML line to insert the shell explainer
Only one per web page

--- a/test.html
+++ b/test.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
 <html>
-<!--
-  SHEEXP: SHEll EXPlainer
-  Copyright (C) 2015 Thierry EXCOFFIER, Universite Claude Bernard
-
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation; either version 2 of the License, or
-  (at your option) any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, write to the Free Software
-  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-  Contact: Thierry.EXCOFFIER@univ-lyon1.fr
--->
   <head>
     <title>SHEEXP: SHell EXplainer</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8">
-    <link rel="stylesheet" href="colorize.css" type="text/css">
-    <script src="colorize.js"></script>
   </head>
   <body>
-    <noscript><h1>
-	Cette application nécessite l'activation de JavaScript
-	</h1></noscript>
+    <noscript><h1>IL FAUT ACTIVER JAVASCRIPT</h1></noscript>
     <div>
       Tapez une ligne de commande Bourne shell pour voir son interprétation :
       <div style="position:fixed; right:0; top: 0; color:#888; font-size:60%">
@@ -38,6 +14,6 @@
 	  debug</a>
       </div>
     </div>
-    <script>sheexp()</script>
+    <script src="colorize.js"></script><script>sheexp()</script>
   </body>
 </html>
