Better help on 'for'

--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
       <div style="position:fixed; right:0; top: 0; color:#888; font-size:60%">
 	<a onclick="update.display_debug = !update.display_debug;update.last = '';update()">
 	  debug</a>
+	<a href="doc_colorize.html">colors</a>
       </div>
     </div>
     <script src="colorize.js"></script><script>sheexp()</script>
