--- a/test.html
+++ b/test.html
@@ -15,6 +15,9 @@
 	<a href="doc_colorize.html">colors</a>
       </div>
     </div>
-    <script src="colorize.js"></script><script>sheexp()</script>
+    <link rel="stylesheet" href="colorize.css" type="text/css">
+    <script src="colorize.js"></script>
+    <div id="sheexp"></div>
+    <script>sheexp(document.getElementById("sheexp"))</script>
   </body>
 </html>
