The editor no more enlarge the container object. Fix the (s)

--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
     </div>
     <link rel="stylesheet" href="colorize.css" type="text/css">
     <script src="colorize.js"></script>
-    <div id="sheexp"></div>
-    <script>sheexp(document.getElementById("sheexp"))</script>
+    <div id="demo_sheexp" style="width:100%"></div>
+    <script>sheexp(document.getElementById("demo_sheexp"))</script>
   </body>
 </html>
