--- a/fyp.html
+++ b/fyp.html
@@ -12,6 +12,8 @@
     <iframe style="width:100%; height:5.3em; border: 0px;">
       Browser does not allow IFRAME.
     </iframe>
+    <img style="display: none" id="current" src="">
+    <img style="display: none" id="goal" src="">
     <script src="fyp.js"></script>
   </body>
 </html>
