--- a/key.html
+++ b/key.html
@@ -16,6 +16,13 @@
         border-collapse: collapse;
         border-spacing: 0px;
         margin: auto;
+        border-bottom:  1px solid #000;
+    }
+    TABLE TR.more TD {
+        font-size: 70%;
+        padding: 0px;
+        line-height: 1em;
+        border-top: 1px solid #CCC;
     }
 
     P {
@@ -25,8 +32,12 @@
 
     TD,
     TH {
-        border: 0.1em solid #000;
-        padding: 0.1em
+        border-top: 1px solid #000;
+        border-left: 1px solid #000;
+        border-right: 1px solid #000;
+        padding: 0.1em;
+        line-height: 1em;
+        font-weight: normal;
     }
 
     SPAN#input {
@@ -80,10 +91,6 @@
     .keypad span {
         background: #EEE;
         margin: 0.2em;
-    }
-
-    .average {
-        font-size: 60%
     }
 
     .emoji {
